<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>com2009_simulations</name>
  <version>0.0.1</version>
  <description>
    Simulation package for COM2009 Assignment #2
  </description>
  <maintainer email="t.howard@sheffield.ac.uk">Tom Howard</maintainer>
  <license>TODO</license>
  
  <buildtool_depend>ament_cmake</buildtool_depend>
  
  <depend>gazebo_ros_pkgs</depend>
  <depend>tuos_simulations</depend>
  
  <export>
    <build_type>ament_cmake</build_type>
    <gazebo_ros gazebo_model_path="${prefix}/models"/>
  </export>

</package>