<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>tuos_tb3_tools</name>
  <version>0.0.0</version>
  <description>Tools for working with the real TUoS Waffles</description>
  <maintainer email="t.howard@sheffield.ac.uk">Tom Howard</maintainer>
  <license>GPL-3.0-only</license>

  <exec_depend>rclpy</exec_depend>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>

  <depend>rclcpp</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
